fixed nav alignment

--- a/stylesheets/master.css
+++ b/stylesheets/master.css
@@ -68,7 +68,6 @@ a:visited {
 #menu ul {
   list-style: none;
   margin: 0;
-  text-align: center;
 }
 
 #menu ul li {
